[project]
name = "detective-agent-ai"
version = "0.1.0"
description = "AI assistant service for Detective Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.7,<3.0",
    "typing-extensions>=4.11",
    "langgraph>=0.2.0",
    "httpx>=0.27,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.uv]
package = false
